--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,114 @@
       transform: rotate(360deg);
     }
   }
+
+  .nav-link:active {
+    color: #61dafb;
+  }
+  
+  
+  .resume {
+    padding-left: 3%;
+    padding-top: 5%;
+  }
+  
+  .about-me {
+    padding-left: 3%;
+    padding-top: 5%;
+  }
+  
+  .about-me p {
+    padding-top: 5%;
+    text-align: left;
+  }
+  
+  .about-me img {
+    padding-top: 3%;
+    border-radius: 50%;
+    width: 18%;
+    height: 18%;
+  }
+  
+  .contact {
+    padding-left: 3%;
+    padding-top: 5%;
+  }
+  .footer {
+    display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-shrink: 0;
+  }
+  
+  footer img {
+    width: 7%;
+    height: 7%;
+    border-radius: 10%;
+    opacity: 40%;
+    
+  }
+  
+  .portfolio {
+    display: flex;
+    flex-direction: column;
+    padding-left: 3%;
+    padding-top: 5%;
+  }
+  
+  .image {
+    position: relative;
+    width: 50%;
+    height: 50%;
+  }
+  
+  .image_img {
+    display: block;
+    width: 100%;
+  }
+  
+  .image_top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+  transition: opacity 0.2s;
+  }
+  
+  .image_top:hover {
+    opacity: 1;
+  }
+  
+  .project_img {
+    font-size: 2em;
+    font-weight: bold;
+    opacity: 50%;
+  }
+  .project_img:hover {
+    font-size: 3em;
+    font-weight: bold;
+    opacity: 90%;
+  }
+  
+  .github {
+    height: 30px;
+    width: 30px;
+    margin-top: 0.25em;
+    opacity: 50%;
+    border-radius: 20%;
+  }
+  .github:hover {
+    height: 40px;
+    width: 40px;
+    opacity: 90%;
+  }
+  
+  
